Fixed SubaccountFilter text-alignment

--- a/src/pages/signals/components/filters/SubaccountFilter.module.scss
+++ b/src/pages/signals/components/filters/SubaccountFilter.module.scss
@@ -37,7 +37,7 @@
 }
 
 .Button {
-  text-align: left;
+  text-align: left !important;
   position: relative;
 
   * > span {
